k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  type: NodePort   
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30007
